--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 </body>
 <script src="dist/dragging.js"></script>
 <script>
-    dragging("#test");
+    dragging("#test","yjk12rp45ghz5a1yp8jyv","123");
 </script>
 </html>
